create add projects func
